chore:add dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,36 +5,35 @@ description = "A Hybrid-search RAG repository"
 authors = ["Samiksha Kolhe <kolhesamiksha25@gmail.com>"]
 readme = "README.md"
 repository = "https://github.com/kolhesamiksha/Hybrid-Search-RAG"
+keywords = ["streamlit", "langchain", "openai", "rag", "python", "groq", "hybrid search"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-numpy = ">=1.22.4,<3"
-pandas = "^2.2.3"
-streamlit = [
-    { version = "^1.41.1", python = ">=3.9,<3.9.7 || >3.9.7,<4.0" }
-]
-streamlit-chat = "^0.1.1"
-streamlit-elements = "^0.1.0"
-langchain = "^0.3.13"
-langchain-community = "^0.3.13"
-fastembed = "^0.5.0"
-langchain-core = "^0.3.28"
-langchain-milvus = "^0.1.7"
-langchain-openai = "^0.2.14"
-langchain-groq = "^0.2.2"
-openai = "^1.58.1"
-tiktoken = "^0.8.0"
-pymilvus = "^2.5.1"
-faiss-cpu = "^1.9.0.post1"
-fastapi = "^0.115.6"
-uvicorn = "^0.34.0"
-pycryptodome = "^3.21.0"
-ragas = "^0.2.9"
-datasets = "^3.2.0"
-flashrank = "^0.2.9"
-pygithub = "^2.5.0"
-lark = "^1.2.2"
+python = ">=3.11.9,<3.13"
+streamlit = "1.41.1"
+streamlit-chat = "0.1.1"
+streamlit-elements = "0.1.0"
+langchain-community = "0.2.13"
+langchain = "0.2.12"
+fastembed = "0.3.2"
+langchain-core = "0.2.43"
+langchain-milvus = "0.1.7"
+langchain-openai = "0.1.25"
+langchain-groq = "0.1.10"
+openai = "1.58.1"
+tiktoken = "0.8.0"
+pymilvus = "2.5.1"
+faiss-cpu = "1.9.0.post1"
+fastapi = "0.115.6"
+uvicorn = "0.34.0"
+pycryptodome = "3.21.0"
+ragas = "0.2.9"
+datasets = "3.2.0"
+flashrank = "0.2.9"
+PyGithub = "2.5.0"
+lark = "1.2.2"
+ipython = "8.31.0"
 pymongo = { version = "3.11", extras = ["srv"] }
+python-dotenv = "1.0.1"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5.0"
@@ -43,6 +42,7 @@ flake8 = "^6.0.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.9b0"
+coverage = "^7.2.0"
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.0"
