--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
-name = "webrag"
+name = "hybrid-rag"
 version = "0.0.1"
 description = "A Hybrid-search RAG repository"
 authors = ["Samiksha Kolhe <kolhesamiksha25@gmail.com>"]
@@ -7,48 +11,91 @@ readme = "README.md"
 repository = "https://github.com/kolhesamiksha/Hybrid-Search-RAG"
 keywords = ["streamlit", "langchain", "openai", "rag", "python", "groq", "hybrid search"]
 
+[tool.poetry.packages]
+# Tell Poetry to look inside `src` for the hybrid_rag package
+packages = [{ include = "hybrid_rag", from = "src" }]
+
 [tool.poetry.dependencies]
 python = ">=3.11.9,<3.13"
-streamlit = "1.41.1"
-streamlit-chat = "0.1.1"
-streamlit-elements = "0.1.0"
-langchain-community = "0.2.13"
-langchain = "0.2.12"
-fastembed = "0.3.2"
-langchain-core = "0.2.43"
-langchain-milvus = "0.1.7"
-langchain-openai = "0.1.25"
-langchain-groq = "0.1.10"
-openai = "1.58.1"
-tiktoken = "0.8.0"
-pymilvus = "2.5.1"
-faiss-cpu = "1.9.0.post1"
-fastapi = "0.115.6"
-uvicorn = "0.34.0"
-pycryptodome = "3.21.0"
-ragas = "0.2.9"
-datasets = "3.2.0"
-flashrank = "0.2.9"
-PyGithub = "2.5.0"
-lark = "1.2.2"
-ipython = "8.31.0"
-pymongo = { version = "3.11", extras = ["srv"] }
-python-dotenv = "1.0.1"
+streamlit = "^1.41.1"
+streamlit-chat = "^0.1.1"
+streamlit-elements = "^0.1.0"
+langchain-community = "^0.2.13"
+langchain = "^0.2.12"
+fastembed = "^0.3.2"
+langchain-core = "^0.2.43"
+langchain-milvus = "^0.1.7"
+langchain-openai = "^0.1.25"
+langchain-groq = "^0.1.10"
+openai = "^1.58.1"
+tiktoken = "^0.8.0"
+pymilvus = "^2.5.1"
+faiss-cpu = "^1.9.0.post1"
+fastapi = "^0.115.6"
+uvicorn = "^0.34.0"
+pycryptodome = "^3.21.0"
+ragas = "^0.2.9"
+datasets = "^3.2.0"
+flashrank = "^0.2.9"
+PyGithub = "^2.5.0"
+lark = "^1.2.2"
+ipython = "^8.31.0"
+pymongo = { version = "^3.11", extras = ["srv"] }
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5.0"
 flake8 = "^6.0.0"
 
+[tool.poetry.group.typing.dependencies]
+mypy = "^1.12"
+types-pyyaml = "^6.0.12.2"
+types-requests = "^2.28.11.5"
+types-toml = "^0.10.8.1"
+types-pytz = "^2023.3.0.0"
+types-chardet = "^5.0.4.6"
+types-redis = "^4.3.21.6"
+mypy-protobuf = "^3.0.0"
+
+[tool.coverage.run]
+omit = [
+    "tests/*",
+    "examples/*",
+    "docs/*",
+]
+
+[tool.mypy]
+ignore_missing_imports = true
+disallow_untyped_defs = true
+exclude = ".*(tests|examples|docs).*"
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.9b0"
 coverage = "^7.2.0"
+codespell = "^2.2.0"
+mypy = "^1.5.0"
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.0"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.5.0"
+
+[tool.ruff]
+extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "T201"]
+
+[tool.pytest.ini_options]
+addopts = "--strict-markers --strict-config --durations=5 --snapshot-warn-unused -vv"
+markers = [
+    "requires: mark tests as requiring a specific library",
+    "scheduled: mark tests to run in scheduled testing",
+    "compile: mark placeholder test used to compile integration tests without running them",
+]
+asyncio_mode = "auto"
 
 [tool.codespell]
 skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,templates,*.trig'
@@ -59,16 +106,3 @@ ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 # unsecure - typo but part of API, decided to not bother for now
 ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin,cann'
 
-[tool.ruff]
-extend-include = ["*.ipynb"]
-extend-exclude = [
-    "docs/docs/expression_language/why.ipynb", # TODO: look into why linter errors
-]
-
-[tool.ruff.lint.per-file-ignores]
-"**/{docs}/*" = [
-    "E402", # allow imports to appear anywhere in docs
-    "F401", # allow "imported but unused" example code
-    "F811", # allow re-importing the same module, so that cells can stay independent
-    "F841", # allow assignments to variables that are never read -- it's example code
-]
