--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,7 @@ repos:
     rev: v0.8.4  # Replace with the desired version of ruff
     hooks:
     -   id: ruff
-        args: [--extend-exclude=*.ipynb,.git,.dockerignore,.github,design,docs,examples,logs,tests,.gitattributes,.gitignore,Dockerfile,Makefile,poetry.toml,pyproject.toml,supervisord.conf, --select=E,F,I,T201]
+        args: [--extend-exclude="^(.*(\.ipynb|\.git|\.dockerignore|\.github|design|docs|examples|logs|tests|\.gitattributes|\.gitignore|Dockerfile|Makefile|poetry\.toml|pyproject\.toml|supervisord\.conf))$", --select=I,T201]
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.14.0  # Update with the version from pyproject.toml
