--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -44,8 +44,8 @@ jobs:
     # - name: Run Pre-commit Hooks
     #   run: make run-precommit  # Run all pre-commit hooks
 
-    - name: Run Tests
-      run: make test
+    # - name: Run Tests
+    #   run: make test
 
     # - name: Build Wheel File
     #   run: make build
