--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,7 +51,7 @@ jobs:
     #   run: make build
 
     - name: Build Docker Image
-      run: docker build -t samiksha/hybrid_rag .
+      run: docker build -t samiksha_hybrid_rag .
 
     - name: Log in to Amazon ECR
       id: login-ecr
@@ -64,7 +64,7 @@ jobs:
     - name: Tag Docker Image
       run: |
         IMAGE_URI=${{ secrets.ECR_REGISTRY }}/hybrid-rag-app:latest
-        docker tag hybrid-rag-app:latest $IMAGE_URI
+        docker tag samiksha_hybrid_rag:latest $IMAGE_URI
 
     - name: Push Docker Image
       run: |
