--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -78,3 +78,5 @@ jobs:
         service: ${{ secrets.ECS_SERVICE_NAME }}
         cluster: ${{ secrets.ECS_CLUSTER_NAME }}
         wait-for-service-stability: true
+      env:
+        AWS_REGION: ${{ secrets.AWS_REGION }}
