chore:update supervisord.conf with directories and commands

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,8 @@
 nodaemon=true   ; Keeps supervisor running in the foreground (useful for Docker containers)
 
 [program:fastapi]
-command=uvicorn app.main:app --host 0.0.0.0 --port 8000  ; Command to start FastAPI app
+command=uvicorn chat_restapi.router:app --host 0.0.0.0 --port 8000  ; Command to start FastAPI app
+directory=/Hybrid-Search-RAG/chat_restapi
 autostart=true      ; Start the service automatically
 autorestart=true    ; Restart the service if it crashes
 stderr_logfile=/var/log/fastapi.err.log    ; Redirect stderr to a file
@@ -10,7 +11,8 @@ stdout_logfile=/var/log/fastapi.out.log    ; Redirect stdout to a file
 environment=PYTHONUNBUFFERED=1             ; Set environment variables (optional)
 
 [program:streamlit]
-command=streamlit run app.py --server.port 8501   ; Command to start Streamlit app
+command=streamlit run chat_streamlit_app/app.py --server.port=8501 --server.address=0.0.0.0   ; Command to start Streamlit app
+directory=/Hybrid-Search-RAG/chat_streamlit_app
 autostart=true         ; Start Streamlit automatically
 autorestart=true       ; Restart Streamlit if it crashes
 stderr_logfile=/var/log/streamlit.err.log        ; Redirect stderr to a file
