--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ coverage = "^7.2.0"
 codespell = "^2.2.0"
 
 [tool.ruff]
-extend-include = ["*.ipynb"]
+extend-ignore = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = ["I", "T201"]
